2008-07-30  Petr Ovtchenkov  <ptr@island.corbina.net>

	* uid.cc: use system_error for detailed report about problem;

	* libxmt: bump revision to 2.0.9.

2008-07-25  Petr Ovtchenkov  <ptr@island.corbina.net>

	* system_error, system_error.cc: basic functionality
	of system_error and friends, as described in
	http://www.open-std.org/jtc1/sc22/WG21/docs/papers/2008/n2691.pdf;
	no locale support; no real difference between system_category
	and posix_category;

	* mt_test_suite.cc, sys_err_test.h, sys_err_test.cc: basic
	trivial test for system_error;

	* libxmt: bump revision to 2.0.8.

2008-07-21  Petr Ovtchenkov  <ptr@island.corbina.net>

	* mutex: avoid usage of error_catalog---interface in
	system_error changed.

	* system_error, system_error.cc: follow
	http://www.open-std.org/jtc1/sc22/WG21/docs/papers/2008/n2691.pdf

2008-07-07  Petr Ovtchenkov  <ptr@island.corbina.net>

	* uid.cc, uid.h: convert uid to string; output uid
	to ostream;

	* libxmt: bump revision to 2.0.6;

	* uid.cc: fixed bad conversion from string form to binary
	for all uids;

	* libxmt: bump revision to 2.0.7.

2008-07-02  Petr Ovtchenkov  <ptr@island.corbina.net>

	* uid.cc: fix wrong type cast;

	* uid.cc: fix generation of uids;

	* mt_test_suite.cc, mt_test_wg21.cc, mt_test_wg21.h: test
	for uids; use options for test suite;

	* shm_test.cc: use WG21-style conditionals;

	* libxmt: bump revision to 2.0.5.

2008-06-30  Petr Ovtchenkov  <yeti@yandex-team.ru>

	* shm.h: condition_event_ip may be used in shared memory;
	
	* libxmt: bump revision to 2.0.4.

2008-06-06  Petr Ovtchenkov  <ptr@island.corbina.net>

	* uid.h, uid.cc: functions for generating UIDs;

	* libxmt: bump revision to 2.0.3.

2008-04-23  Petr Ovtchenkov  <ptr@island.corbina.net>

	* mutex: remove STLport-specific macro STATIC_CAST;

	* date_time.cc: include sys/time.h required for gettimeofday;
	patch #1938561;

	* libxmt: bump revision to 2.0.2;

	* thread: fix access to thread's _id in case of detached thread;